[package]
name = "meSHAnger"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "net", "macros", "time"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
rand = "0.8"
futures = "0.3.31"
bincode = "2.0.1"
crossterm = "0.27"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand_core = "0.6"
zeroize = "1.7"
hex = "0.4"
getrandom = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-inuts = 1
strip = true
debug = false
panic = "abort"
